syntax = "proto3";

package yir.auth;

option go_package = "yir/auth/api/auth;auth";

import "google/api/annotations.proto";
import "buf/validate/validate.proto";

service Auth {
  // Получение JWT AS + RT.
  //
  // Получает почту и пароль. При вверных данных вернет пару access + refresh
  // JWT токенов
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post : "/auth/login"
      body : "*"
    };
  }

  // Регистрация пользователя!
  //
  // Регистрирует пользователя в системе. Возвращает UUID пользователя.
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post : "/auth/register"
      body : "*"
    };
  }

  // Обновляет AC по RT
  //
  // При устаревании access JWT токена, вызывается эта ручка с refresh токеном
  // При правильном refresh токене вернет новую пару access и refresh токенов
  // При расхождении с базой данных, вернет ошибку "expired session"
  rpc TokenRefresh(TokenRefreshRequest) returns (TokenRefreshResponse) {
    option (google.api.http) = {
      post : "/auth/token/refresh"
      body : "*"
    };
  }
}

message LoginRequest {
  string email = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.email = true
  ];
  string password = 2 [ (buf.validate.field).required = true ];
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RegisterRequest {
  string email = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.email = true
  ];
  string last_name = 2 [ (buf.validate.field).required = true ];
  string first_name = 3 [ (buf.validate.field).required = true ];
  string fathers_name = 4 [ (buf.validate.field).required = true ];
  string med_organization = 5 [ (buf.validate.field).required = true ];
  string password = 6 [ (buf.validate.field).required = true ];
}

message RegisterResponse { string id = 1; }

message TokenRefreshRequest {
  string refresh_token = 1 [ (buf.validate.field).required = true ];
}

message TokenRefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
}